target/generated-sources/antlr4/com/viskan/payloadbuilder/parser/PayloadBuilderQueryParser.java
// Generated from PayloadBuilderQuery.g4 by ANTLR 4.7.1

//CSOFF
//@formatter:off
package com.viskan.payloadbuilder.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PayloadBuilderQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, OPAREN=4, CPAREN=5, AND=6, ARRAY=7, AS=8, ASC=9, 
		COMMA=10, DESC=11, DOT=12, EXISTS=13, FALSE=14, FIRST=15, FROM=16, IN=17, 
		INNER=18, IS=19, JOIN=20, LAST=21, LEFT=22, NOT=23, NULL=24, NULLS=25, 
		OBJECT=26, ON=27, OR=28, ORDERBY=29, SELECT=30, TRUE=31, WHERE=32, ASTERISK=33, 
		EQUALS=34, EXCLAMATION=35, GREATERTHAN=36, GREATERTHANEQUAL=37, LESSTHAN=38, 
		LESSTHANEQUAL=39, MINUS=40, NOTEQUALS=41, PERCENT=42, PLUS=43, SLASH=44, 
		NUMBER=45, DECIMAL=46, STRING=47, IDENTIFIER=48, QUOTED_IDENTIFIER=49, 
		Comment=50, Space=51;
	public static final int
		RULE_query = 0, RULE_selectItem = 1, RULE_nestedSelectItem = 2, RULE_errorCapturingIdentifier = 3, 
		RULE_errorCapturingIdentifierExtra = 4, RULE_sortItem = 5, RULE_expression = 6, 
		RULE_primary = 7, RULE_functionCall = 8, RULE_literal = 9, RULE_compareOperator = 10, 
		RULE_qname = 11, RULE_identifier = 12, RULE_numericLiteral = 13, RULE_decimalLiteral = 14, 
		RULE_stringLiteral = 15, RULE_booleanLiteral = 16;
	public static final String[] ruleNames = {
		"query", "selectItem", "nestedSelectItem", "errorCapturingIdentifier", 
		"errorCapturingIdentifierExtra", "sortItem", "expression", "primary", 
		"functionCall", "literal", "compareOperator", "qname", "identifier", "numericLiteral", 
		"decimalLiteral", "stringLiteral", "booleanLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'->'", "'['", "']'", "'('", "')'", "'and'", "'array'", "'as'", 
		"'asc'", "','", "'desc'", "'.'", "'exists'", "'false'", "'first'", "'from'", 
		"'in'", "'inner'", "'is'", "'join'", "'last'", "'left'", "'not'", "'null'", 
		"'nulls'", "'object'", "'on'", "'or'", "'order by'", "'select'", "'true'", 
		"'where'", "'*'", "'='", "'!'", "'>'", "'>='", "'<'", "'<='", "'-'", "'!='", 
		"'%'", "'+'", "'/'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, "OPAREN", "CPAREN", "AND", "ARRAY", "AS", "ASC", 
		"COMMA", "DESC", "DOT", "EXISTS", "FALSE", "FIRST", "FROM", "IN", "INNER", 
		"IS", "JOIN", "LAST", "LEFT", "NOT", "NULL", "NULLS", "OBJECT", "ON", 
		"OR", "ORDERBY", "SELECT", "TRUE", "WHERE", "ASTERISK", "EQUALS", "EXCLAMATION", 
		"GREATERTHAN", "GREATERTHANEQUAL", "LESSTHAN", "LESSTHANEQUAL", "MINUS", 
		"NOTEQUALS", "PERCENT", "PLUS", "SLASH", "NUMBER", "DECIMAL", "STRING", 
		"IDENTIFIER", "QUOTED_IDENTIFIER", "Comment", "Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PayloadBuilderQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PayloadBuilderQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public QnameContext from;
		public IdentifierContext alias;
		public ExpressionContext where;
		public TerminalNode SELECT() { return getToken(PayloadBuilderQueryParser.SELECT, 0); }
		public List<SelectItemContext> selectItem() {
			return getRuleContexts(SelectItemContext.class);
		}
		public SelectItemContext selectItem(int i) {
			return getRuleContext(SelectItemContext.class,i);
		}
		public TerminalNode FROM() { return getToken(PayloadBuilderQueryParser.FROM, 0); }
		public TerminalNode EOF() { return getToken(PayloadBuilderQueryParser.EOF, 0); }
		public QnameContext qname() {
			return getRuleContext(QnameContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(PayloadBuilderQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PayloadBuilderQueryParser.COMMA, i);
		}
		public TerminalNode WHERE() { return getToken(PayloadBuilderQueryParser.WHERE, 0); }
		public TerminalNode ORDERBY() { return getToken(PayloadBuilderQueryParser.ORDERBY, 0); }
		public List<SortItemContext> sortItem() {
			return getRuleContexts(SortItemContext.class);
		}
		public SortItemContext sortItem(int i) {
			return getRuleContext(SortItemContext.class,i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			match(SELECT);
			setState(35);
			selectItem();
			setState(40);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(36);
				match(COMMA);
				setState(37);
				selectItem();
				}
				}
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(43);
			match(FROM);
			setState(44);
			((QueryContext)_localctx).from = qname();
			setState(45);
			((QueryContext)_localctx).alias = identifier();
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(46);
				match(WHERE);
				setState(47);
				((QueryContext)_localctx).where = expression(0);
				}
			}

			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ORDERBY) {
				{
				setState(50);
				match(ORDERBY);
				setState(51);
				sortItem();
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(52);
					match(COMMA);
					setState(53);
					sortItem();
					}
					}
					setState(58);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectItemContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public NestedSelectItemContext nestedSelectItem() {
			return getRuleContext(NestedSelectItemContext.class,0);
		}
		public TerminalNode OBJECT() { return getToken(PayloadBuilderQueryParser.OBJECT, 0); }
		public TerminalNode ARRAY() { return getToken(PayloadBuilderQueryParser.ARRAY, 0); }
		public TerminalNode AS() { return getToken(PayloadBuilderQueryParser.AS, 0); }
		public SelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectItem; }
	}

	public final SelectItemContext selectItem() throws RecognitionException {
		SelectItemContext _localctx = new SelectItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_selectItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ARRAY:
			case OBJECT:
				{
				{
				setState(63);
				_la = _input.LA(1);
				if ( !(_la==ARRAY || _la==OBJECT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(64);
				nestedSelectItem();
				}
				}
				break;
			case OPAREN:
			case FALSE:
			case NOT:
			case NULL:
			case TRUE:
			case MINUS:
			case PLUS:
			case NUMBER:
			case DECIMAL:
			case STRING:
			case IDENTIFIER:
			case QUOTED_IDENTIFIER:
				{
				setState(65);
				expression(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AS) | (1L << IDENTIFIER) | (1L << QUOTED_IDENTIFIER))) != 0)) {
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(68);
					match(AS);
					}
				}

				setState(71);
				identifier();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NestedSelectItemContext extends ParserRuleContext {
		public QnameContext from;
		public ExpressionContext where;
		public TerminalNode OPAREN() { return getToken(PayloadBuilderQueryParser.OPAREN, 0); }
		public List<SelectItemContext> selectItem() {
			return getRuleContexts(SelectItemContext.class);
		}
		public SelectItemContext selectItem(int i) {
			return getRuleContext(SelectItemContext.class,i);
		}
		public TerminalNode CPAREN() { return getToken(PayloadBuilderQueryParser.CPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PayloadBuilderQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PayloadBuilderQueryParser.COMMA, i);
		}
		public TerminalNode FROM() { return getToken(PayloadBuilderQueryParser.FROM, 0); }
		public TerminalNode WHERE() { return getToken(PayloadBuilderQueryParser.WHERE, 0); }
		public QnameContext qname() {
			return getRuleContext(QnameContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NestedSelectItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nestedSelectItem; }
	}

	public final NestedSelectItemContext nestedSelectItem() throws RecognitionException {
		NestedSelectItemContext _localctx = new NestedSelectItemContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nestedSelectItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(OPAREN);
			setState(75);
			selectItem();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(76);
				match(COMMA);
				setState(77);
				selectItem();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(83);
				match(FROM);
				setState(84);
				((NestedSelectItemContext)_localctx).from = qname();
				}
			}

			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(87);
				match(WHERE);
				setState(88);
				((NestedSelectItemContext)_localctx).where = expression(0);
				}
			}

			setState(91);
			match(CPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorCapturingIdentifierContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public ErrorCapturingIdentifierExtraContext errorCapturingIdentifierExtra() {
			return getRuleContext(ErrorCapturingIdentifierExtraContext.class,0);
		}
		public ErrorCapturingIdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_errorCapturingIdentifier; }
	}

	public final ErrorCapturingIdentifierContext errorCapturingIdentifier() throws RecognitionException {
		ErrorCapturingIdentifierContext _localctx = new ErrorCapturingIdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_errorCapturingIdentifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			identifier();
			setState(94);
			errorCapturingIdentifierExtra();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorCapturingIdentifierExtraContext extends ParserRuleContext {
		public ErrorCapturingIdentifierExtraContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_errorCapturingIdentifierExtra; }
	 
		public ErrorCapturingIdentifierExtraContext() { }
		public void copyFrom(ErrorCapturingIdentifierExtraContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ErrorIdentContext extends ErrorCapturingIdentifierExtraContext {
		public List<TerminalNode> MINUS() { return getTokens(PayloadBuilderQueryParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(PayloadBuilderQueryParser.MINUS, i);
		}
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ErrorIdentContext(ErrorCapturingIdentifierExtraContext ctx) { copyFrom(ctx); }
	}
	public static class RealIdentContext extends ErrorCapturingIdentifierExtraContext {
		public RealIdentContext(ErrorCapturingIdentifierExtraContext ctx) { copyFrom(ctx); }
	}

	public final ErrorCapturingIdentifierExtraContext errorCapturingIdentifierExtra() throws RecognitionException {
		ErrorCapturingIdentifierExtraContext _localctx = new ErrorCapturingIdentifierExtraContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_errorCapturingIdentifierExtra);
		int _la;
		try {
			setState(103);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MINUS:
				_localctx = new ErrorIdentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(96);
					match(MINUS);
					setState(97);
					identifier();
					}
					}
					setState(100); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==MINUS );
				}
				break;
			case EOF:
				_localctx = new RealIdentContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortItemContext extends ParserRuleContext {
		public Token order;
		public Token nullOrder;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NULLS() { return getToken(PayloadBuilderQueryParser.NULLS, 0); }
		public TerminalNode ASC() { return getToken(PayloadBuilderQueryParser.ASC, 0); }
		public TerminalNode DESC() { return getToken(PayloadBuilderQueryParser.DESC, 0); }
		public TerminalNode FIRST() { return getToken(PayloadBuilderQueryParser.FIRST, 0); }
		public TerminalNode LAST() { return getToken(PayloadBuilderQueryParser.LAST, 0); }
		public SortItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortItem; }
	}

	public final SortItemContext sortItem() throws RecognitionException {
		SortItemContext _localctx = new SortItemContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sortItem);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			expression(0);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASC || _la==DESC) {
				{
				setState(106);
				((SortItemContext)_localctx).order = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==ASC || _la==DESC) ) {
					((SortItemContext)_localctx).order = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NULLS) {
				{
				setState(109);
				match(NULLS);
				setState(110);
				((SortItemContext)_localctx).nullOrder = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==FIRST || _la==LAST) ) {
					((SortItemContext)_localctx).nullOrder = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrimaryExpressionContext extends ExpressionContext {
		public PrimaryContext primary() {
			return getRuleContext(PrimaryContext.class,0);
		}
		public PrimaryExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class LogicalNotContext extends ExpressionContext {
		public TerminalNode NOT() { return getToken(PayloadBuilderQueryParser.NOT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public LogicalNotContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class InExpressionContext extends ExpressionContext {
		public ExpressionContext left;
		public TerminalNode IN() { return getToken(PayloadBuilderQueryParser.IN, 0); }
		public TerminalNode OPAREN() { return getToken(PayloadBuilderQueryParser.OPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CPAREN() { return getToken(PayloadBuilderQueryParser.CPAREN, 0); }
		public TerminalNode NOT() { return getToken(PayloadBuilderQueryParser.NOT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PayloadBuilderQueryParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PayloadBuilderQueryParser.COMMA, i);
		}
		public InExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ComparisonExpressionContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode EQUALS() { return getToken(PayloadBuilderQueryParser.EQUALS, 0); }
		public TerminalNode NOTEQUALS() { return getToken(PayloadBuilderQueryParser.NOTEQUALS, 0); }
		public TerminalNode LESSTHAN() { return getToken(PayloadBuilderQueryParser.LESSTHAN, 0); }
		public TerminalNode LESSTHANEQUAL() { return getToken(PayloadBuilderQueryParser.LESSTHANEQUAL, 0); }
		public TerminalNode GREATERTHAN() { return getToken(PayloadBuilderQueryParser.GREATERTHAN, 0); }
		public TerminalNode GREATERTHANEQUAL() { return getToken(PayloadBuilderQueryParser.GREATERTHANEQUAL, 0); }
		public ComparisonExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ArithmeticBinaryContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ASTERISK() { return getToken(PayloadBuilderQueryParser.ASTERISK, 0); }
		public TerminalNode SLASH() { return getToken(PayloadBuilderQueryParser.SLASH, 0); }
		public TerminalNode PERCENT() { return getToken(PayloadBuilderQueryParser.PERCENT, 0); }
		public TerminalNode PLUS() { return getToken(PayloadBuilderQueryParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(PayloadBuilderQueryParser.MINUS, 0); }
		public ArithmeticBinaryContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class ArithmeticUnaryContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(PayloadBuilderQueryParser.MINUS, 0); }
		public TerminalNode PLUS() { return getToken(PayloadBuilderQueryParser.PLUS, 0); }
		public ArithmeticUnaryContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class NullPredicateContext extends ExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode IS() { return getToken(PayloadBuilderQueryParser.IS, 0); }
		public TerminalNode NULL() { return getToken(PayloadBuilderQueryParser.NULL, 0); }
		public TerminalNode NOT() { return getToken(PayloadBuilderQueryParser.NOT, 0); }
		public NullPredicateContext(ExpressionContext ctx) { copyFrom(ctx); }
	}
	public static class LogicalBinaryContext extends ExpressionContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode AND() { return getToken(PayloadBuilderQueryParser.AND, 0); }
		public TerminalNode OR() { return getToken(PayloadBuilderQueryParser.OR, 0); }
		public LogicalBinaryContext(ExpressionContext ctx) { copyFrom(ctx); }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OPAREN:
			case FALSE:
			case NULL:
			case TRUE:
			case NUMBER:
			case DECIMAL:
			case STRING:
			case IDENTIFIER:
			case QUOTED_IDENTIFIER:
				{
				_localctx = new PrimaryExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(114);
				primary(0);
				}
				break;
			case MINUS:
			case PLUS:
				{
				_localctx = new ArithmeticUnaryContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(115);
				((ArithmeticUnaryContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==MINUS || _la==PLUS) ) {
					((ArithmeticUnaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(116);
				expression(7);
				}
				break;
			case NOT:
				{
				_localctx = new LogicalNotContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(117);
				match(NOT);
				setState(118);
				expression(2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(152);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
					case 1:
						{
						_localctx = new ArithmeticBinaryContext(new ExpressionContext(_parentctx, _parentState));
						((ArithmeticBinaryContext)_localctx).left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(121);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(122);
						((ArithmeticBinaryContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ASTERISK) | (1L << MINUS) | (1L << PERCENT) | (1L << PLUS) | (1L << SLASH))) != 0)) ) {
							((ArithmeticBinaryContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(123);
						((ArithmeticBinaryContext)_localctx).right = expression(7);
						}
						break;
					case 2:
						{
						_localctx = new ComparisonExpressionContext(new ExpressionContext(_parentctx, _parentState));
						((ComparisonExpressionContext)_localctx).left = _prevctx;
